using Aevatar.Agents.Abstractions;
using Aevatar.Agents.Abstractions.EventSourcing;
using Aevatar.Agents.Core.Factory;
using Aevatar.Agents.Orleans;
using Aevatar.Agents.Orleans.EventSourcing;
using Aevatar.Agents.Orleans.MongoDB;
using Microsoft.Extensions.DependencyInjection;
using Microsoft.Extensions.Hosting;
using Microsoft.Extensions.Logging;
using MongoDB.Driver;
using MongoDBEventStoreDemo;
using Orleans.Hosting;
using Orleans.Serialization;

Console.WriteLine("ğŸŒŒ Aevatar Agent Framework - OrleansEventStore + MongoDB Demo");
Console.WriteLine("==============================================================\n");
Console.WriteLine("This demo showcases:");
Console.WriteLine("  âœ… OrleansEventStore (Grain-based event coordination)");
Console.WriteLine("  âœ… MongoDB as Orleans GrainStorage backend");
Console.WriteLine("  âœ… Distributed concurrency control via Orleans");
Console.WriteLine("  âœ… Event persistence to MongoDB");
Console.WriteLine("  âœ… Automatic event replay from MongoDB\n");

// ========== MongoDB Configuration ==========
const string mongoConnectionString = "mongodb://localhost:27017";
const string mongoDatabase = "OrleansEventStore";
const string collectionPrefix = "BankAccounts";

Console.WriteLine("ğŸ“Š Architecture:");
Console.WriteLine("   OrleansEventStore (IEventStore)");
Console.WriteLine("      â†“");
Console.WriteLine("   IEventStorageGrain (Orleans Grain)");
Console.WriteLine("      â†“");
Console.WriteLine("   Orleans GrainStorage (MongoDB Provider)");
Console.WriteLine("      â†“");
Console.WriteLine($"   MongoDB: {mongoDatabase}\n");

Console.WriteLine("ğŸ“Š MongoDB Configuration:");
Console.WriteLine($"   Connection: {mongoConnectionString}");
Console.WriteLine($"   Database: {mongoDatabase}");
Console.WriteLine($"   Collection Prefix: {collectionPrefix}");
Console.WriteLine($"   Collection Name: {collectionPrefix}-EventStorageState\n");

// ========== Build Host with Orleans + MongoDB ==========
var host = Host.CreateDefaultBuilder(args)
    .ConfigureLogging(logging =>
    {
        logging.ClearProviders();
        logging.AddConsole();
        logging.SetMinimumLevel(LogLevel.Information);
    })
    .UseOrleans((context, siloBuilder) =>
    {
        siloBuilder
            // Localhost clustering for demo
            .UseLocalhostClustering()
            
            // âœ… Configure MongoDB Client (REQUIRED before AddMongoDBGrainStorage)
            .UseMongoDBClient(provider =>
            {
                var settings = MongoClientSettings.FromConnectionString(mongoConnectionString);
                settings.MaxConnectionPoolSize = 100;
                settings.MinConnectionPoolSize = 10;
                return settings;
            })
            
            // âœ… Protobuf serialization (REQUIRED for AgentStateEvent!)
            .ConfigureServices(services =>
            {
                services.AddSerializer(serializerBuilder =>
                {
                    serializerBuilder.AddProtobufSerializer();
                });
            })
            
            // âœ… MongoDB GrainStorage for EventStore
            .AddMongoDBGrainStorage("EventStoreStorage", options =>
            {
                options.DatabaseName = mongoDatabase;
                options.CollectionPrefix = collectionPrefix;
                options.CreateShardKeyForCosmos = false;
            });
            
            // Orleans 9.x è‡ªåŠ¨å‘ç° Grainsï¼Œæ— éœ€æ‰‹åŠ¨æ³¨å†Œ
    })
    .ConfigureServices(services =>
    {
        // âœ… Register MongoDB Event Repository (decoupled storage implementation)
        // IMPORTANT: Use separate collection per Agent type for better performance
        services.AddSingleton<IEventRepository>(sp =>
        {
            var mongoClient = sp.GetRequiredService<IMongoClient>();
            var logger = sp.GetRequiredService<ILogger<MongoEventRepository>>();
            
            // Collection name pattern: {AgentType}Events
            // This ensures each agent type has its own collection with optimized indexes
            return new MongoEventRepository(
                mongoClient, 
                mongoDatabase, 
                collectionName: "BankAccountEvents",  // âœ… Separate collection for BankAccount
                logger);
        });
        
        // âœ… Register OrleansEventStore (uses IEventRepository + IEventStorageGrain)
        services.AddSingleton<IEventStore, OrleansEventStore>();
        
        // âœ… Register Orleans Agent Factory
        services.AddSingleton<OrleansGAgentActorFactory>();
        
        // âœ… Register Auto-Discovery Factory Provider
        services.AddSingleton<IGAgentActorFactoryProvider, AutoDiscoveryGAgentActorFactoryProvider>();
    })
    .Build();

// Start Orleans Silo
Console.WriteLine("ğŸš€ Starting Orleans Silo with MongoDB backend...\n");
await host.StartAsync();

try
{
    var eventStore = host.Services.GetRequiredService<IEventStore>();
    var factory = host.Services.GetRequiredService<OrleansGAgentActorFactory>();

    Console.WriteLine("âœ… Orleans Silo started successfully!\n");

    // ============================================================
    // Part 1: Create Account and Execute Transactions
    // ============================================================
    Console.WriteLine("ğŸ“ Part 1: Creating Account and Transactions");
    Console.WriteLine("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

    var accountId = Guid.NewGuid();
    Console.WriteLine($"ğŸ“Š Agent ID: {accountId:N}\n");

    // âœ… Create Actor with EventSourcing enabled (using extension method)
    var actor = await factory.CreateGAgentActorAsync<BankAccountAgent>(accountId)
        .WithEventSourcingAsync(eventStore, host.Services);

    var agent = actor.GetAgent() as BankAccountAgent;
    if (agent == null)
    {
        throw new InvalidOperationException("Failed to get BankAccountAgent instance");
    }

    // Create account
    await agent.CreateAccountAsync("Alice Smith", 100m);
    
    Console.WriteLine($"âœ… Account created");
    Console.WriteLine($"   Holder: {agent.GetState().AccountHolder}");
    Console.WriteLine($"   Balance: ${agent.GetState().Balance:F2}");
    Console.WriteLine($"   Version: v{agent.GetCurrentVersion()}\n");

    // Individual transactions
    Console.WriteLine("ğŸ’° Individual Transactions:");
    Console.WriteLine("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€");
    await agent.DepositAsync(1000m, "Salary");
    Console.WriteLine($"  âœ“ Deposited $1000 (Salary) - Balance: ${agent.GetState().Balance:F2}");

    await agent.DepositAsync(500m, "Bonus");
    Console.WriteLine($"  âœ“ Deposited $500 (Bonus) - Balance: ${agent.GetState().Balance:F2}");

    await agent.WithdrawAsync(300m, "Rent");
    Console.WriteLine($"  âœ“ Withdrew $300 (Rent) - Balance: ${agent.GetState().Balance:F2}\n");

    Console.WriteLine($"ğŸ’µ Current Balance: ${agent.GetState().Balance:F2}");
    Console.WriteLine($"ğŸ“ˆ Current Version: v{agent.GetCurrentVersion()}\n");

    // ============================================================
    // Part 2: Batch Transactions
    // ============================================================
    Console.WriteLine("ğŸ“ Part 2: Batch Transactions");
    Console.WriteLine("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

    Console.WriteLine("âš¡ Submitting 3 transactions in one batch:");
    Console.WriteLine("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€");
    await agent.BatchTransactionsAsync(
        (200m, "Freelance payment"),
        (-150m, "Groceries"),
        (100m, "Gift")
    );

    Console.WriteLine($"  âœ“ Batch completed - Balance: ${agent.GetState().Balance:F2}\n");

    Console.WriteLine($"ğŸ’µ Current Balance: ${agent.GetState().Balance:F2}");
    Console.WriteLine($"ğŸ“ˆ Current Version: v{agent.GetCurrentVersion()} (Snapshot will trigger at v11)\n");

    // ============================================================
    // Part 2.5: More Transactions to Trigger Snapshot
    // ============================================================
    Console.WriteLine("ğŸ“ Part 2.5: More Transactions (Testing Snapshot)");
    Console.WriteLine("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

    Console.WriteLine("ğŸ’° Adding 5 more transactions to trigger snapshot...");
    Console.WriteLine("â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€â”€");
    
    await agent.DepositAsync(300m, "Investment return");
    Console.WriteLine($"  âœ“ Deposited $300 (Investment) - Balance: ${agent.GetState().Balance:F2}, Version: v{agent.GetCurrentVersion()}");

    await agent.WithdrawAsync(100m, "Utilities");
    Console.WriteLine($"  âœ“ Withdrew $100 (Utilities) - Balance: ${agent.GetState().Balance:F2}, Version: v{agent.GetCurrentVersion()}");

    await agent.DepositAsync(50m, "Cashback");
    Console.WriteLine($"  âœ“ Deposited $50 (Cashback) - Balance: ${agent.GetState().Balance:F2}, Version: v{agent.GetCurrentVersion()}");

    await agent.WithdrawAsync(200m, "Dining");
    Console.WriteLine($"  âœ“ Withdrew $200 (Dining) - Balance: ${agent.GetState().Balance:F2}, Version: v{agent.GetCurrentVersion()}");

    await agent.DepositAsync(150m, "Gift received");
    Console.WriteLine($"  âœ“ Deposited $150 (Gift) - Balance: ${agent.GetState().Balance:F2}, Version: v{agent.GetCurrentVersion()}");

    Console.WriteLine($"\nğŸ“¸ Snapshot should be saved at version 10!");
    Console.WriteLine($"ğŸ’µ Final Balance: ${agent.GetState().Balance:F2}");
    Console.WriteLine($"ğŸ“ˆ Final Version: v{agent.GetCurrentVersion()}\n");

    var balanceBeforeRecovery = agent.GetState().Balance;
    var versionBeforeRecovery = agent.GetCurrentVersion();

    // ============================================================
    // Part 3: Event Replay with Snapshot (Crash Recovery Simulation)
    // ============================================================
    Console.WriteLine("ğŸ“ Part 3: Event Replay with Snapshot from MongoDB");
    Console.WriteLine("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

    Console.WriteLine("ğŸ”„ Simulating grain deactivation and reactivation...");
    Console.WriteLine("   (Creating new actor instance with same ID)\n");

    // Create new actor instance (simulating grain reactivation)
    var actor2 = await factory.CreateGAgentActorAsync<BankAccountAgent>(accountId)
        .WithEventSourcingAsync(eventStore, host.Services);  // â† Auto replays events from storage!

    var agent2 = actor2.GetAgent() as BankAccountAgent;
    if (agent2 == null)
    {
        throw new InvalidOperationException("Failed to get BankAccountAgent instance on recovery");
    }

    Console.WriteLine("âœ… Grain reactivated and state recovered from MongoDB!");
    Console.WriteLine($"   Holder: {agent2.GetState().AccountHolder}");
    Console.WriteLine($"   Balance: ${agent2.GetState().Balance:F2}");
    Console.WriteLine($"   Transactions: {agent2.GetState().TransactionCount}");
    Console.WriteLine($"   Version: v{agent2.GetCurrentVersion()}");
    Console.WriteLine($"   ğŸ“¸ Recovery used Snapshot + incremental events!\n");

    // Verify consistency
    if (Math.Abs(agent2.GetState().Balance - balanceBeforeRecovery) < 0.01 && 
        agent2.GetCurrentVersion() == versionBeforeRecovery)
    {
        Console.WriteLine("âœ… State consistency verified!");
        Console.WriteLine($"   Balance matches: ${balanceBeforeRecovery:F2}");
        Console.WriteLine($"   Version matches: v{versionBeforeRecovery}\n");
    }
    else
    {
        Console.WriteLine("âŒ State mismatch detected!");
        Console.WriteLine($"   Expected: ${balanceBeforeRecovery:F2}, Got: ${agent2.GetState().Balance:F2}");
        Console.WriteLine($"   Expected version: v{versionBeforeRecovery}, Got: v{agent2.GetCurrentVersion()}\n");
    }

    // ============================================================
    // Part 4: Transaction History
    // ============================================================
    Console.WriteLine("ğŸ“ Part 4: Transaction History (from MongoDB)");
    Console.WriteLine("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");

    var state = agent2.GetState();
    Console.WriteLine("ğŸ“œ Complete History:");
    foreach (var entry in state.History)
    {
        Console.WriteLine($"   {entry}");
    }

    Console.WriteLine($"\nğŸ“Š Final Statistics:");
    Console.WriteLine($"   Account Holder: {state.AccountHolder}");
    Console.WriteLine($"   Final Balance: ${state.Balance:F2}");
    Console.WriteLine($"   Total Transactions: {state.TransactionCount}");
    Console.WriteLine($"   Event Version: v{agent2.GetCurrentVersion()}\n");

    // ============================================================
    // MongoDB Collection Information
    // ============================================================
    Console.WriteLine("ğŸ“ MongoDB Collection Details");
    Console.WriteLine("â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•â•\n");
    
    Console.WriteLine("ğŸ—„ï¸  Collection Location:");
    Console.WriteLine($"   Database: {mongoDatabase}");
    Console.WriteLine($"   Collection: {collectionPrefix}-EventStorageState");
    Console.WriteLine($"   Document ID: {accountId}");
    Console.WriteLine($"\nğŸ’¡ View data using:");
    Console.WriteLine($"   - MongoDB Compass: {mongoConnectionString}");
    Console.WriteLine($"   - Mongo Shell: mongosh {mongoDatabase}");
    Console.WriteLine($"   - Query: db['{collectionPrefix}-EventStorageState'].find().pretty()\n");

    Console.WriteLine("âœ¨ Demo completed successfully!");
    Console.WriteLine("\nğŸ¯ Key Architecture Points:");
    Console.WriteLine("   1. OrleansEventStore wraps IEventStorageGrain");
    Console.WriteLine("   2. IEventStorageGrain provides Orleans concurrency control");
    Console.WriteLine("   3. Orleans GrainStorage persists to MongoDB");
    Console.WriteLine("   4. Collection name = CollectionPrefix + '-EventStorageState'");
    Console.WriteLine($"   5. This demo uses: '{collectionPrefix}-EventStorageState'");
    Console.WriteLine("   6. Orleans handles serialization automatically (Protobuf)");
    Console.WriteLine("   7. Grain deactivation/reactivation is transparent\n");
}
catch (Exception ex)
{
    Console.WriteLine($"\nâŒ Error: {ex.Message}");
    Console.WriteLine($"   Type: {ex.GetType().Name}");
    if (ex.InnerException != null)
    {
        Console.WriteLine($"   Inner: {ex.InnerException.Message}");
    }
    Console.WriteLine($"\nğŸ’¡ Make sure MongoDB is running:");
    Console.WriteLine($"   docker run -d -p 27017:27017 --name mongodb mongo:7.0");
    Console.WriteLine($"   OR: cd examples/MongoDBEventStoreDemo && docker-compose up -d\n");
    
    // Print stack trace for debugging
    Console.WriteLine($"\nğŸ“‹ Stack Trace:");
    Console.WriteLine(ex.StackTrace);
}
finally
{
    Console.WriteLine("\nğŸ›‘ Shutting down Orleans Silo...");
    await host.StopAsync();
    Console.WriteLine("âœ… Orleans Silo stopped.\n");
}
